fix(alignment)  hero section alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    flex-direction: column;
     padding: 0px 100px;
 }
 
 ul{
     list-style-type: none;
+    display: flex;
 }
 
 a{
@@ -19,12 +18,34 @@ a{
     justify-content: space-between;
 }
 
-.links{
-    display: flex;
-}   
 
 .logo{
     display: flex;
     align-items: center;
 }
 
+.hero{
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero-title{
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    gap: 10px;
+}
+
+.hero-image{
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-signup{
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    padding: 5px;
+}
